tests/ui/wait-for-local-storage-false.goml
// This test ensures that the `wait-for-local-storage-false` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500
// Shouldn't wait here since it's already the case.
wait-for-local-storage-false: {"something3": "a"}
click: "#js-wait-local-storage-2"
// Should wait for 100ms here.
wait-for-local-storage-false: {"something3": null}
wait-for-local-storage-false: {"something3": "hello hi"}
//~^ ERROR: All local storage entries still match
// Check that the script won't stop running anything after the previous command failed.
assert-local-storage: {"something3": "tadam"}
//~^ ERROR: [localStorage item "something3" (of value "tadam") != "hello hi"]
